--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kamiblog - Inicio</title>
-    <meta name="description" content="Blog personal donde se puede encontrar opiniones de algunos animes y/o resumenes de animes que te puedan parecer interesantes">
-    <meta name="keywords" content="Anime, Blog personal de animes, Géneros anime, Descripcion anime, resumen anime, animes interesantes">
+    <title>WORLDS - Inicio</title>
+    <meta name="description" content="Blog encargado de recopilar la informacion de los ultimos 6 campeones de torneo mundial de league of legends">
+    <meta name="keywords" content="lol,league of legends,top,esports,gaming">
     <link rel="shortcut icon" href="img/wicon.ico" type="image/x-ico">
     <link rel="stylesheet" href="css/estilo.css">
   </head>
@@ -68,17 +68,17 @@
         <section class="about-sites">
           <div class="contenedor-final">
             <h2 class="titulo-final">Otros sitios para visitarme</h2>
-                      <div class="sites-cont">
-            <div class="sites-int"> <a href="https://www.facebook.com/leagueoflegends"
+            <div class="sites-cont">
+              <div class="sites-int"> <a href="https://www.facebook.com/leagueoflegends"
 
-                target="_blank"> <img src="img/fb.png" alt=""> </a> </div>
-            <div class="sites-int"> <a href="https://www.twitch.tv/riotgames"
+                  target="_blank"> <img src="img/fb.png" alt=""> </a> </div>
+              <div class="sites-int"> <a href="https://www.twitch.tv/riotgames"
 
-                target="_blank"> <img src="img/twitch.png" alt=""> </a> </div>
-            <div class="sites-int"> <a href="https://www.youtube.com/channel/UC2t5bjwHdUX4vM2g8TRDq5g"
+                  target="_blank"> <img src="img/twitch.png" alt=""> </a> </div>
+              <div class="sites-int"> <a href="https://www.youtube.com/channel/UC2t5bjwHdUX4vM2g8TRDq5g"
 
-                target="_blank"> <img src="img/yt.png" alt=""> </a> </div>
-          </div>
+                  target="_blank"> <img src="img/yt.png" alt=""> </a> </div>
+            </div>
           </div>
         </section>
       </div>
@@ -86,7 +86,7 @@
     <footer>
       <div class="contenedor-footer">
         <div class="content-foot">
-          <h4>Kamiblog</h4>
+          <h4>WORLDS/h4>
         </div>
       </div>
       <h2 class="titulo-copy">© WORLDS <a id="contacto" href="contacto/index.html">Contactanos</a>
@@ -94,3 +94,4 @@
     </footer>
   </body>
 </html>
+
