--- a/campeones/index.html
+++ b/campeones/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="bread">
         <ul class="breadcrumb">
-          <li><a><img class="icono" src="../img/aqui.png" alt=""><span>Géneros</span></a></li>
+          <li><a><img class="icono" src="../img/aqui.png" alt=""><span>Finales</span></a></li>
           <li><a href="../index.html"><img class="icono" src="../img/inicio.png"
 
                 alt=""><span class="text">
